# rust-kutil

./: Cargo.toml  README.md
cli/: Cargo.toml
cli-macros/: Cargo.toml
cli-macros/src/: lib.rs
cli-macros/src/derive_debuggable/attributes/: as.rs  enum.rs  field.rs  struct.rs  style.rs
cli-macros/src/derive_debuggable/enum_generator/: generator.rs  handle_variant.rs  impl_debuggable.rs
cli-macros/src/derive_debuggable/struct_generator/: generator.rs  handle_field.rs  impl_debuggable.rs  mod.rs
cli-macros/src/derive_depict/enum_generator/: handle_variant.rs  impl_depict.rs
cli-macros/src/derive_depict/struct_generator/: handle_field.rs  impl_depict.rs
cli/examples/: debuggable.rs  debuggable_derive.rs
cli/src/: lib.rs
cli/src/clap/: completion.rs  mod.rs  version.rs
cli/src/debug/: context.rs  debuggable.rs  dyn_debuggable.rs  format.rs  theme.rs
cli/src/debug/utils/: field.rs  heading.rs  map.rs
cli/src/run/: run.rs
crates/cli/: Cargo.toml
crates/cli-macros/: Cargo.toml
crates/cli-macros/src/: lib.rs
crates/cli-macros/src/derive_debuggable/: mod.rs
crates/cli-macros/src/derive_debuggable/attributes/: as.rs  field.rs  mod.rs  struct.rs  variant.rs
crates/cli-macros/src/derive_debuggable/enum_generator/: impl_debuggable.rs  mod.rs
crates/cli-macros/src/derive_debuggable/generator/: generator.rs  handle_field.rs  impl_debuggable.rs
crates/cli-macros/src/derive_debuggable/struct_generator/: handle_field.rs
crates/cli/examples/: debuggable.rs  debuggable_derive.rs
crates/cli/src/: clap.rs  exit.rs  lib.rs  run.rs  tracing.rs
crates/cli/src/clap/: colorize.rs  completion.rs  version.rs
crates/cli/src/debug/: context.rs  debuggable.rs  dyn_debuggable.rs  format.rs  mod.rs  prefix.rs  theme.rs
crates/cli/src/debug/utils/: list.rs  map.rs
crates/cli/src/log/: tracing.rs
crates/cli/src/run/: exit.rs  exit_error.rs  mod.rs  run.rs
crates/http/: Cargo.toml
crates/http/examples/: tower_caching_advanced.rs  tower_caching_basic.rs
crates/http/examples/utils/: mod.rs
crates/http/src/: errors.rs  lib.rs  uri.rs
crates/http/src/axum/: host_router.rs  shutdown.rs
crates/http/src/body/: html.rs  mod.rs  read.rs  reader.rs
crates/http/src/cache/: body.rs  cache.rs  mod.rs  response.rs  sized.rs  tiered.rs  weight.rs
crates/http/src/cache/axum/: handlers.rs
crates/http/src/cache/body/: cached.rs  mod.rs  pieces.rs  read.rs
crates/http/src/cache/implementation/moka/: builder.rs  cache.rs  weigher.rs
crates/http/src/cache/key/: common.rs  key.rs
crates/http/src/cache/middleware/: configuration.rs  hooks.rs  request.rs
crates/http/src/cache/middleware/responses/: upstream.rs
crates/http/src/cache/response/: cached.rs  mod.rs  pieces.rs
crates/http/src/file/: response.rs
crates/http/src/headers/: conditional.rs  custom.rs  date.rs  encoding.rs  etag.rs  headers.rs  into.rs  language.rs  mod.rs  parseable.rs
crates/http/src/headers/media_type/: media_type.rs  media_type_selector.rs  segment.rs
crates/http/src/headers/preferences/: preference.rs  preferences.rs  selector.rs  weight.rs
crates/http/src/tls/: acme.rs  axum.rs  container.rs  error.rs  mod.rs  provider.rs  resolver.rs
crates/http/src/tower/caching/: _service_old.rs  configuration.rs  hooks.rs  layer.rs  mod.rs  response.rs  service.rs
crates/http/src/tower/caching/axum/: handlers.rs  headers.rs
crates/http/src/transcoding/: body.rs  response.rs
crates/http/src/uri/: path_and_query.rs  query_map.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs
crates/io/src/bytes_stream/: asynchronous.rs  blocking.rs
crates/io/src/network/ip/: extras.rs  interfaces.rs  mod.rs
crates/io/src/network/ip/listenable/: address.rs  stack.rs
crates/io/src/network/ip/listenable/configuration/: addresses.rs  port.rs
crates/io/src/reader/: bounded.rs  buffer.rs  chars.rs  mod.rs
crates/io/src/stream/: blocking.rs  mod.rs
crates/io/src/stream/bytes/: asynchronous.rs  blocking.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/bind/: axum.rs  bind.rs  binds.rs  mod.rs  tls.rs
crates/server/src/http/: body.rs  errors.rs  html.rs  mod.rs
crates/server/src/http/cache/: cache.rs  entry.rs  headers.rs  key.rs  mod.rs
crates/server/src/http/encoding/: encoding.rs  mod.rs
crates/server/src/http/headers/: accepted_encodings.rs  content_length.rs  mod.rs  qvalue.rs
crates/server/src/http/middleware/: mod.rs
crates/server/src/http/middleware/encoded_caching/: future.rs  layer.rs  mod.rs  reset.rs  service.rs
crates/std/: Cargo.toml
crates/std/src/: lib.rs
crates/std/src/borrow/: mod.rs
crates/std/src/collections/: hashmaps.rs  hashsets.rs  mod.rs
crates/std/src/error/: errors.rs  message.rs  mod.rs
crates/std/src/foster/: byte_string.rs  byte_string_vector.rs  bytestr.rs  bytestr_vector.rs  foster.rs  mod.rs  string.rs  string_vector.rs
crates/std/src/iter/: converting.rs  first_last.rs  mod.rs
crates/std/src/metric/: byte_count.rs
crates/std/src/string/: conjunction.rs  find.rs  mod.rs  parse.rs
crates/std/src/sync/: counter.rs
crates/transcoding/: Cargo.toml
crates/transcoding/src/: bytes.rs  encoding.rs  lib.rs  reader.rs
http/: Cargo.toml
io/: Cargo.toml
scripts/: _functions  build-docs  examples  expand  install-bash-completion
std/: Cargo.toml
std-macros/: Cargo.toml
std-macros/src/: lib.rs
std-macros/src/attributes/: display.rs  from_str.rs  mod.rs  strings.rs
std-macros/src/derive_display/generator/: generator.rs  impl_display.rs
std-macros/src/derive_from_str/generator/: generator.rs  impl_from_str.rs  mod.rs
std/examples/: join_conjunction.rs
std/src/: lib.rs
std/src/collections/: hashmaps.rs  hashsets.rs
std/src/error/: accumulator.rs  errors.rs  fail_fast.rs  macros.rs  message.rs  mod.rs  recipient.rs
std/src/foster/: byte_string.rs  byte_string_vector.rs  mod.rs  string.rs  string_vector.rs
std/src/fs/: modification.rs
std/src/future/: captured.rs
std/src/iter/: converting.rs  first_last.rs
std/src/metric/: byte_count.rs
std/src/string/: conjunction.rs
(+50 files in other folders)
