[workspace]
members = [
    "crates/cli",
    "crates/cli-macros",
    "crates/http",
    "crates/io",
    "crates/std",
    "crates/transcoding",
]
resolver = "3"

[patch.crates-io]
kutil-cli = { path = "crates/cli" }
kutil-cli-macros = { path = "crates/cli-macros" }
kutil-http = { path = "crates/http" }
kutil-io = { path = "crates/io" }
kutil-std = { path = "crates/std" }
kutil-transcoding = { path = "crates/transcoding" }
