[workspace]
resolver = "3"
members = [
    "cli",
    "cli-macros",
    "http",
    "io",
    "std",
    "std-macros",
    "transcoding",
]

[patch.crates-io]
kutil-cli = { path = "cli" }
kutil-cli-macros = { path = "cli-macros" }
kutil-http = { path = "http" }
kutil-io = { path = "io" }
kutil-std = { path = "std" }
kutil-std-macros = { path = "std-macros" }
kutil-transcoding = { path = "transcoding" }
