[package]
edition = "2024"

name = "kutil-cli"
description = "CLI utilities from Kutil"
version = "0.0.9"
rust-version = "1.88"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-cli"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = ["command-line-utilities"] # https://crates.io/category_slugs
keywords = ["kutil", "cli", "clap"]

[dependencies]
anstream = "0.6.19"
anstyle = "1.0.11"
clap = { version = "4.5.41", features = ["derive"] }
clap_complete_command = "0.6.1"
kutil-cli-macros = { optional = true, version = "=0.0.5" }
owo-colors = "4.2.2"
time = { version = "0.3.41", features = ["macros"] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "local-time",
] }

[dev-dependencies]
kutil-std = "=0.0.6"

[features]
## Include procedural macros for `derive`.
derive = ["dep:kutil-cli-macros"]

[[example]]
name = "debuggable_derive"
required-features = ["derive"]

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
