[package]
edition = "2024"

name = "kutil-std"
description = "std utilities from Kutil"
version = "0.0.6"
rust-version = "1.89"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-std"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = []             # https://crates.io/category_slugs
keywords = ["kutil", "std"]

[dependencies]
bimap = { optional = true, version = "0.6.3" }
bytestring = { optional = true, version = "1.4.0" }
kutil-std-macros = { optional = true, version = "=0.0.1" }
papaya = { optional = true, version = "0.2.3" }
rapidhash = { optional = true, version = "3.0.0", features = ["unsafe"] }

[features]
## Enable `ByteString` implementations.
byte_string = ["dep:bytestring"]
## Enable bimap
bimap = ["dep:bimap"]
## Enable fast collections.
fast_collections = ["dep:bimap", "dep:papaya", "dep:rapidhash"]
## Include procedural macros for `derive`.
derive = ["dep:kutil-std-macros"]

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
