[package]
edition = "2021"

name = "kutil-cli-macros"
description = "Procedural macros for kutil-cli"
version = "0.0.1"
rust-version = "1.84"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-cli"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = ["command-line-utilities"] # https://crates.io/category_slugs
keywords = ["kutil", "cli", "clap"]

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"
