[package]
edition = "2024"

name = "kutil-cli-macros"
description = "Procedural macros for kutil-cli"
version = "0.0.4"
rust-version = "1.85"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-cli"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = ["command-line-utilities"] # https://crates.io/category_slugs
keywords = ["kutil", "cli", "clap"]

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
