[package]
edition = "2024"

name = "kutil-http"
description = "HTTP utilities from Kutil"
version = "0.0.2"
rust-version = "1.86"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-http"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = []                               # https://crates.io/category_slugs
keywords = ["kutil", "http", "tower", "axum"]

[dependencies]
async-compression = "0.4.23"                                                   # just for Level
axum = { optional = true, version = "0.8.4" }
bytes = "1.10.1"
bytestr = "0.1.0"
duration-str = "0.17.0"
http = "1.3.1"
http-body = "1.0.1"
httpdate = "1.0.3"
kutil-std = { version = "=0.0.4", features = ["bytestr", "fast_collections"] }
kutil-transcoding = "=0.0.2"
moka = { optional = true, version = "0.12.10", features = ["future"] }
pin-project = "1.1.10"
thiserror = "2.0.12"
tracing = "0.1.41"
tokio = "1.45.0"
tokio-util = { version = "0.7.15", features = ["io-util"] }
tower = { optional = true, version = "0.5.2" }
url = "2.5.4"

[dev-dependencies]
# For examples/caching.rs
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "local-time",
] }

[features]
axum = ["dep:axum"]
tower = ["dep:tower"]
moka = ["dep:moka"]

[[example]]
name = "tower_caching_basic"
required-features = ["tower", "axum", "moka"]

[[example]]
name = "tower_caching_advanced"
required-features = ["tower", "axum", "moka"]

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
