[package]
edition = "2024"

name = "kutil-io"
description = "I/O utilities from Kutil"
version = "0.0.1"
rust-version = "1.86"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-io"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = []            # https://crates.io/category_slugs
keywords = ["kutil", "io"]

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
kutil-std = "=0.0.2"
netdev = "0.34.0"
tokio = { version = "1.45.0", features = ["rt"] }

[features]
default = ["blocking", "async"]
blocking = []
async = []
