[package]
edition = "2024"

name = "kutil-server"
description = "Server utilities from Kutil"
version = "0.0.1"
rust-version = "1.85"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-server"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = []                # https://crates.io/category_slugs
keywords = ["kutil", "server"]

[dependencies]
async-compression = { optional = true, version = "0.4.23", features = [
    "tokio",
    "brotli",
    "deflate",
    "gzip",
    "zstd",
] }
axum = { optional = true, version = "0.8.4" }
axum-server = { optional = true, version = "0.7.2", features = ["tls-rustls"] }
bytes = { optional = true, version = "1.10.1" }
compris = { version = "0.0.2", features = ["derive"] }
http = { optional = true, version = "1.3.1" }
http-body = { optional = true, version = "1.0.1" }
http-body-util = { optional = true, version = "0.1.3" }
hyper = { optional = true, version = "1.6.0" }
kutil-io = { path = "../io", version = "0.0.1" }
kutil-std = { path = "../std", version = "0.0.2" }
moka = { version = "0.12.10", features = ["sync"] }
pin-project = { optional = true, version = "1.1.10" }
tracing = "0.1.41"
tokio = { optional = true, version = "1.44.2", features = ["io-util"] }
tower = { optional = true, version = "0.5.2" }
#kutil-cli = { path = "../cli", version = "0.0.4" }

[features]
axum = ["dep:axum", "dep:axum-server", "dep:hyper"]
http = [
    "dep:async-compression",
    "dep:http-body",
    "dep:http-body-util",
    "dep:tokio",
]
tower = ["dep:tower", "dep:pin-project", "dep:http", "dep:bytes"]
