[package]
edition = "2024"

name = "kutil-std"
description = "std utilities from Kutil"
version = "0.0.2"
rust-version = "1.85"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-std"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = []             # https://crates.io/category_slugs
keywords = ["kutil", "std"]

[dependencies]
ahash = "0.8.11"
papaya = "0.2.1"
