[package]
edition = "2024"

name = "kutil-transcoding"
description = "Transcoding utilities from Kutil"
version = "0.0.4"
rust-version = "1.88"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-kutil"
documentation = "https://docs.rs/kutil-transcoding"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = []                                    # https://crates.io/category_slugs
keywords = ["kutil", "transcoding", "compression"]

[dependencies]
async-compression = { version = "0.4.25", features = [
    "tokio",
    "brotli",
    "deflate",
    "gzip",
    "zstd",
] }
bytes = "1.10.1"
kutil-std = { version = "=0.0.6", features = ["derive"] }
pin-project = "1.1.10"
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["io-util"] }

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
